@@ -6,6 +6,7 @@ Version 0.8.1 (ongoing):
 	API CHANGE: random_array uses normal distribution
 	random_unitary is uniform w.r.t. Haar measure
 	much better HilbertArray.relabel method
+	HilbertArray.trace between arbitrary spaces
 
 Version 0.8 (2011-12-01):
 	as_np_matrix take {row,col}_space args
